# mergework

./: .coderabbit.yaml  .dockerignore  .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile  Dockerfile  LICENSE  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: FUNDING.yml  pull_request_template.md
app/: __init__.py  account_validation.py  accounts.py  activity.py  admin.py  admin_routes.py  auth.py  bounty_api.py  bounty_attempts.py  bounty_availability.py  bounty_filters.py  bounty_sorting.py  config.py  control_chars.py  db.py  github_bounty_board.py  github_issue_finalization.py  hub.py  json_payloads.py  ledger_views.py  main.py  mcp.py  mcp_results.py  mcp_tools.py  mcp_work_proof.py  me.py  models.py  openapi_request_bodies.py  path_params.py  public_routes.py  query_validation.py  serializers.py  status.py  submission_requirements.py  treasury.py  treasury_executor.py  treasury_executor_config.py  treasury_routes.py  wallet_api.py  wallets.py  (+1 more)
deploy/: cloud-init.yml
docs/: AGENTS.md  admin-runbook.md  agent-guide.md  agents.md  api-examples.md  bounty-lifecycle.md  bounty-rules.md  ledger.md  paid-bounties.md
migrations/: env.py
scripts/: __init__.py  api_host_args.py  bounty_refs.py  check_agents.py  check_bounty_issue_states.py  check_deploy_ready.py  check_live_bounty_closing_refs.py  claim_inventory.py  docs_smoke.py  export_ledger_snapshot.py  pr_queue_health.py  proposed_work_triage.py  reconcile_payouts.py  review_bounty_candidates.py  staging_webhook_dry_run.py  treasury_executor.py  (+1 more)
(+94 files in other folders)
