[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mergework"
version = "0.1.0"
description = "Proof-of-open-source-work ledger for MRWK"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
  "alembic>=1.13.2",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "jinja2>=3.1.4",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0.31",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10.0",
  "pytest>=8.2.0",
  "ruff>=0.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
plugins = []
strict = true
warn_return_any = true
warn_unused_configs = true
exclude = ["tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
